--- a/package.json
+++ b/package.json
@@ -3,8 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.2.6",
+    "@mui/icons-material": "^7.1.1",
+    "@mui/material": "^7.1.1",
+    "axios": "^1.9.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
