--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^18.0.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^7.6.2",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
